syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup;

import "google/protobuf/timestamp.proto";

service RegistroChavePix {
  rpc registrar (ChavePixRequest) returns (ChavePixResponse) {}
}

enum TipoConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

message ChavePixRequest {
  string idCliente = 1;
  TipoConta tipoConta = 2;
  TipoChave tipoChave = 3;
  string chave = 4;
  google.protobuf.Timestamp criadoEm = 5;
}

message ChavePixResponse {
  string idCliente = 1;
  string id = 2;
}